--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     },
     "homepage": "https://github.com/thanhtaile3242/MERN-BLOG#readme",
     "dependencies": {
+        "dotenv": "^16.4.1",
         "express": "^4.18.2",
+        "mongoose": "^8.1.1",
         "nodemon": "^3.0.3"
     }
 }
