--- a/blog/package.json
+++ b/blog/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
+    "cookie-parser": "^1.4.6",
     "firebase": "^10.7.2",
     "flowbite-react": "^0.7.2",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
     "react-icons": "^5.0.1",
